objects/TIP_Product_category_Watchers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product_Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_level_1__c</fullName>
        <label>Product Feature level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Display__c</fullName>
        <label>Sender Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TIP Product category Watchers</label>
</CustomObject>